istio/labs/jwt/auth.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: "jwt-auth"
  namespace: learning
spec:
  selector:
    matchLabels:
      app: helloworld
  jwtRules:
  - issuer: "issuer"
    jwks: |
        {
          "keys": [ 
            {
            "e": "AQAB",
            "kid": "wAcHT4hyVjkuwfaymxU9Tax2bLrn-BHHKiCD-SeGGh0",
            "kty": "RSA",
            "n": "pRQ5EVmxASvPdMFWuyzedu99K56ShAO_735Jaywty0oefWooUTseNxsueDecR11BJTO9XTRmMxkA5BxiMxCUQ30cWmeQ3vU-XKbt82yirjOGFCQQeunVXAd2jwfQ217Mx3TXTug0nJD856yD-bzwSu_BZVlX4A7tqdT6FfDD0TmGnV6xhtJnR7B2Tu7YgP0afpyhShtC4DDpjcZj-S9nL3Fs6Htg2Lie5NhFQjklo41voc21TAQ9BZYD8-vfWtsEaTWKBSjb3ACgdHNvKhDhD9cb-SzYqZYOnUmLiJOtSezrPEWKv0O0wiSMc8oa6mDYtxH1GMvaQGIFyCmNKphiTw"
            } 
          ]
        }
